# netnewsticker

./: CMakeLists.txt
po/: CMakeLists.txt  messages.sh  plasma_applet_netnewsticker_de.po
src/: feeddirectory.ui  feedsettings.ui  feedsettingswidget.cpp  feedsettingswidget.h  filtersettings.ui  filtersettingswidget.cpp  filtersettingswidget.h  item.cpp  item.h  netnewsticker.cpp  netnewsticker.h  newsfeedmanager.cpp  newsfeedmanager.h  settings.kcfg  settings.kcfgc  settingsdialog.cpp  settingsdialog.h  visualsettings.ui
